--- a/index.html
+++ b/index.html
@@ -6,14 +6,52 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="CSS/style.css">
-  <!-- BOOTSTRAP -->
+
+  <!-- BOOTSTRAP
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
+
+  <!-- FONTAWESOME -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <title>Carosello Array di Oggetti</title>
 </head>
 <body>
   
+  <div class="main-container d-flex debug-border">
+ <!-- PARTE SLIDES -->
+
+    <div class="slider">
+
+      <div class="items-wrapper">
+        <img src="img/01.webp" alt="spiderman">
+      </div>
+
+
+     <!-- THUMBNAIL -->
+      <div class="thumbs-wrapper">
+        <img src="img/01.webp" alt="img">
+        <img class="active" src="img/02.webp" alt="img">
+        <img src="img/03.webp" alt="img">
+        <img src="img/04.webp" alt="img">
+        <img src="img/05.webp" alt="img">
+      </div>
+
+      <!-- BOTTONI -->
+      <div class="buttons">
+
+        <div class="btn-arrow prev">
+          <i class="fa-solid fa-chevron-up"></i>
+        </div>
+
+        <div class="btn-arrow next">
+          <i class="fa-solid fa-chevron-down"></i>
+        </div>
+
+      </div>
+
+    </div>
+  </div>
 
   <script src="JS/script.js"></script>
 </body>
