[edit] collections with counter [add] class 'hide' 'active' [add] buttons e.listener

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
     <div class="slider">
 
       <div class="items-wrapper">
-        <img src="img/01.webp" alt="spiderman">
+        <img class="item" src="img/01.webp" alt="spiderman">
       </div>
 
 
      <!-- THUMBNAIL -->
       <div class="thumbs-wrapper">
-        <img src="img/01.webp" alt="img">
-        <img class="active" src="img/02.webp" alt="img">
-        <img src="img/03.webp" alt="img">
-        <img src="img/04.webp" alt="img">
-        <img src="img/05.webp" alt="img">
+        <img class="thumb" src="img/01.webp" alt="img">
+        <img class="thumb active" src="img/02.webp" alt="img">
+        <img class="thumb" src="img/03.webp" alt="img">
+        <img class="thumb" src="img/04.webp" alt="img">
+        <img class="thumb" src="img/05.webp" alt="img">
       </div>
 
       <!-- BOTTONI -->
